# signsafe-ai

./: .env.example  DECISIONS.md  Dockerfile  README.md  pyproject.toml
app/: config.py  db.py  errors.py  main.py  queue.py
app/services/: embeddings.py  legal_updater.py  llm.py  parser.py  rag.py
app/workers/: analysis.py  ingestion.py
dataset_setup/: bootstrap.py  crawler.py  vector_store.py
