[project]
name = "signsafe-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9.0",
  "asyncpg>=0.29",
  "qdrant-client>=1.7",
  "anthropic>=0.25",
  "openai>=1.0",
  "pymupdf>=1.23",
  "python-docx>=1.1",
  "boto3>=1.34",
  "pydantic-settings>=2.0",
  "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
